--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "league/flysystem-azure",
+    "name": "laravel/flysystem-azure",
     "description": "Flysystem adapter for Windows Azure",
     "license": "MIT",
     "authors": [
@@ -11,7 +11,8 @@
     "require": {
         "php": ">=5.5.0",
         "league/flysystem": "~1.0",
-        "microsoft/azure-storage": "~0.10.1"
+        "microsoft/azure-storage": "~0.10.1",
+        "nesbot/carbon": "~1.21"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -19,7 +20,7 @@
     },
     "autoload": {
         "psr-4": {
-            "League\\Flysystem\\Azure\\": "src/"
+            "Laravel\\Flysystem\\Azure\\": "src/"
         }
     },
     "config": {
