--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/flysystem-azure",
+    "name": "league/flysystem-azure",
     "description": "Flysystem adapter for Windows Azure",
     "license": "MIT",
     "authors": [
@@ -11,8 +11,7 @@
     "require": {
         "php": ">=5.5.0",
         "league/flysystem": "~1.0",
-        "microsoft/azure-storage": "~0.10.1",
-        "nesbot/carbon": "~1.21"
+        "microsoft/azure-storage": "~0.10.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -20,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Laravel\\Flysystem\\Azure\\": "src/"
+            "League\\Flysystem\\Azure\\": "src/"
         }
     },
     "config": {
