--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": ">=5.5.0",
         "league/flysystem": "~1.0",
-        "microsoft/azure-storage": "~0.10.1"
+        "microsoft/azure-storage": "~0.10.1",
+        "nesbot/carbon": "~1.21"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
